hphp/hack/test/typecheck/new_inference/transitive_error_3.php.exp
File "transitive_error_3.php", line 18, characters 10-11:
Invalid return type (Typing[4323])
  File "transitive_error_3.php", line 10, characters 12-12:
  `T` is a constrained type parameter
  File "transitive_error_3.php", line 10, characters 17-22:
  This type constraint is violated
  File "transitive_error_3.php", line 10, characters 17-22:
  Expected `string`
  File "transitive_error_3.php", line 14, characters 22-24:
  But got `int`
  File "transitive_error_3.php", line 14, characters 22-24:
  This type argument to `Inv` must match exactly (it is invariant)
